오늘 머먹을래?

--- a/public/index.html
+++ b/public/index.html
@@ -4,28 +4,28 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>BestMusic - 음악사이트</title>
+  <title>오늘 뭐 먹을래?</title>
 
   <!-- SEO 메타 태그 -->
-  <meta name="description" content="BestMusic 사이트는 자신이 좋아하는 노래를 찾아 들을수있는 사이트입니다.">
-  <meta name="keywords" content="웹 개발, 웹 디자인, 튜토리얼, HTML, CSS, JavaScript, 프론트엔드, 백엔드">
-  <meta name="author" content="BestMusic">
+  <meta name="description" content="이 사이트는 다양한 음식 추천과 레시피를 제공하여 오늘 먹을 음식을 쉽게 결정할 수 있게 도와줍니다.">
+  <meta name="keywords" content="음식 추천, 레시피, 요리, 식사, 음식 블로그, 요리법, 맛집 추천">
+  <meta name="author" content="오늘 뭐 먹을래?">
 
   <!-- 메타 태그 -->
-  <meta property="og:title" content="BestMusic 사이트는 자신이 좋아하는 노래를 찾아 들을수있는 사이트입니다.">
-  <meta property="og:description" content="BestMusic 사이트는 자신이 좋아하는 노래를 찾아 들을수있는 사이트입니다.">
-  <meta property="og:image" content="http://rlagusals234.dothome.co.kr/assets/img/webs.jpg">
-  <meta property="og:url" content="http://rlagusals234.dothome.co.kr">
+  <meta property="og:title" content="오늘 뭐 먹을래? - 다양한 음식 추천과 레시피 제공">
+  <meta property="og:description" content="이 사이트는 다양한 음식 추천과 레시피를 제공하여 오늘 먹을 음식을 쉽게 결정할 수 있게 도와줍니다.">
+  <meta property="og:image" content="https://github.com/hyunminkim93">
+  <meta property="og:url" content="https://github.com/hyunminkim93">
   <meta property="og:type" content="website">
 
   <!-- 메타 태그 -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="BestMusic 사이트는 자신이 좋아하는 노래를 찾아 들을수있는 사이트입니다.">
-  <meta name="twitter:description" content="BestMusic 사이트는 자신이 좋아하는 노래를 찾아 들을수있는 사이트입니다.">
-  <meta name="twitter:image" content="http://rlagusals234.dothome.co.kr/assets/img/webs.jpg">
+  <meta name="twitter:title" content="오늘 뭐 먹을래? - 다양한 음식 추천과 레시피 제공">
+  <meta name="twitter:description" content="이 사이트는 다양한 음식 추천과 레시피를 제공하여 오늘 먹을 음식을 쉽게 결정할 수 있게 도와줍니다.">
+  <meta name="twitter:image" content="https://github.com/hyunminkim93">
 
   <!-- 파비콘 -->
-  <link rel="icon" type="image/svg+xml" href="assets/svg/favicon.svg" />
+  <link rel="icon" type="image/svg+xml" href="./favicon.svg" />
 
   <!-- 메인 임시 -->
   <link href="https://websfont.github.io/pyeongChangPeace/pyeongChangPeace.css" rel="stylesheet">
