음식정보 사이트

--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>오늘 뭐 먹을래?</title>
+  <title>오늘 머먹을래?</title>
 
   <!-- SEO 메타 태그 -->
   <meta name="description" content="이 사이트는 다양한 음식 추천과 레시피를 제공하여 오늘 먹을 음식을 쉽게 결정할 수 있게 도와줍니다.">
   <meta name="keywords" content="음식 추천, 레시피, 요리, 식사, 음식 블로그, 요리법, 맛집 추천">
-  <meta name="author" content="오늘 뭐 먹을래?">
+  <meta name="author" content="오늘 머먹을래?">
 
   <!-- 메타 태그 -->
   <meta property="og:title" content="오늘 뭐 먹을래? - 다양한 음식 추천과 레시피 제공">
@@ -20,7 +20,7 @@
 
   <!-- 메타 태그 -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="오늘 뭐 먹을래? - 다양한 음식 추천과 레시피 제공">
+  <meta name="twitter:title" content="오늘 머먹을래? - 다양한 음식 추천과 레시피 제공">
   <meta name="twitter:description" content="이 사이트는 다양한 음식 추천과 레시피를 제공하여 오늘 먹을 음식을 쉽게 결정할 수 있게 도와줍니다.">
   <meta name="twitter:image" content="https://github.com/hyunminkim93">
 
